chore: WOW-205 lose a chunk of my life investigating why our app no longer works on Safari 10

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,13 @@
       appDiv.innerHTML =
         '<h1 style="font-size: 3em; font-family: monospace;">Failed to load :(</h1>' +
         '<p style="padding: 0 1em; font-family: sans-serif;">This can happen ' +
-        'when your device is too old. We try to support devices from the ' +
-        'past 4 years</p>'
+        'when your device is too old. We currently aim to support:</p>' +
+        '<ul>' +
+        '<li>Google Chrome 60+ (July 2017)</li>' +
+        '<li>Mozilla Firefox 55+ (August 2017)</li>' +
+        '<li>Apple iOS Safari 11.3+ (March 2018)</li>' +
+        '<li>Samsung Internet 8.2+ (December 2018)</li>' +
+        '</ul>'
       appDiv.style.textAlign = 'center'
       appDiv.style.marginTop = '40vh'
     }
